[package]
name = "return_rpg"
version = "0.1.0"
authors = ["Bobho"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
cgmath = "0.17.0"
specs = {version  = "0.15.1", features = ["specs-derive", "parallel"]}
image = "0.22.3"
